@@ -2161,6 +2161,7 @@ ConfigView.section.ipfilter.enable.descriptionCache.tooltip=When disabled, descr
 
 OpenTorrentWindow.filesInfo=%1 of %2 will be downloaded.
 ConfigView.label.openmytorrents=Open 'My Torrents' on startup
+ConfigView.label.open_transfer_bar_on_start=Open Transfer Bar on startup
 ConfigView.section.style.DNDalwaysInIncomplete=Always show torrents with 'Do Not Download' files in Incomplete section of My Torrents  
 
 OpenTorrentWindow.mb.noGlobalDestDir.title=Destination Directory
